.ipynb_checkpoints/nohup-checkpoint.out
  File "Experiments.py", line 15
    %matplotlib inline
    ^
SyntaxError: invalid syntax
